@@ -454,7 +454,7 @@ checksum=0179c6531a
 format=js
 minified=1
 [sass:sass/main.scss]
-checksum=dd123b24e6
+checksum=ba2c622ea2
 format=css
 minified=0
 [sass-min:sass/main.scss]
